# ano1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bpnn/: CMakeLists.txt  backprop.cpp  ns_test.cpp
bpnn/include/: backprop.hpp
exercise1/: CMakeLists.txt  color-generator.cpp  floodfill.cpp  main.cpp
exercise1/include/: color-generator.hpp  floodfill.hpp
exercise2/: CMakeLists.txt  main.cpp
exercise3/: CMakeLists.txt  main.cpp
exercise4/: CMakeLists.txt  main.cpp
exercise5/: CMakeLists.txt  main.cpp
exercise6/: CMakeLists.txt  main.cpp
exercise7/: bpnn_pytorch.ipynb  model.pth
exercise8/: loss.txt  mnist_pytorch.ipynb  model.pth
exercise9/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  color-generator.cpp  detected-object.cpp  ethalons.cpp  floodfill.cpp  hog.cpp  image-gradient.cpp  k-means-clustering.cpp  slic.cpp
lib/include/: color-generator.hpp  detected-object.hpp  ethalons.hpp  floodfill.hpp  hog.hpp  image-gradient.hpp  k-means-clustering.hpp  moments.hpp  slic.hpp  text.hpp
